# kibble

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  README.md  kibble.sublime-project  thext
source/examples/: CMakeLists.txt  argparse.cpp  assert.cpp  astar_france.cpp  astar_maze.cpp  catenary.cpp  config.cpp  ctti.cpp  easing.cpp  endian.cpp  event.cpp  filesystem.cpp  instrumentation.cpp  job.cpp  job_affinity.cpp  job_barrier.cpp  job_daemon.cpp  job_dependencies.cpp  job_diamond_graph.cpp  job_exceptions.cpp  job_preemption.cpp  kvs.cpp  logger.cpp  logger2.cpp  logger2_signal.cpp  logger_signal.cpp  md5.cpp  memory_tracking.cpp  morton.cpp  optimization.cpp  save_file.cpp  self.cpp  simplex_noise.cpp  sparseset.cpp  spline.cpp  statistics.cpp  tcp.cpp  undo.cpp  uuid.cpp
source/examples/harness/: job_example.cpp  job_example.h
source/kibble/: CMakeLists.txt  config.h.in  kibble-config.cmake.in
source/kibble/algorithm/: algorithm.h  astar.h  endian.h  msb_search.h  optimization.h
source/kibble/algorithm/experimental/: astar_with_hashset.h
source/kibble/argparse/: argparse.cpp  argparse.h  argparse.hpp
source/kibble/assert/: assert.cpp  assert.h
source/kibble/cli/: terminal.cpp  terminal.h
source/kibble/config/: config.cpp  config.h
source/kibble/config/kvs/: kvs.cpp  kvs.h
source/kibble/ctti/: ctti.h
source/kibble/event/: event.h  event_bus.cpp  event_bus.h
source/kibble/filesystem/: filesystem.cpp  filesystem.h  md5.cpp  md5.h  resource_pack.cpp  resource_pack.h  save_file.cpp  save_file.h
source/kibble/filesystem/serialization/: archiver.h  std_archiver.cpp  std_archiver.h  stream_serializer.cpp  stream_serializer.h
source/kibble/filesystem/stream/: memory_stream.cpp  memory_stream.h  packfile_stream.cpp  packfile_stream.h
source/kibble/hash/: hash.h  hashstr.h
source/kibble/job/: job.cpp  job.h
source/kibble/logger/: channel.cpp  channel.h  common.cpp  common.h  dispatcher.cpp  dispatcher.h  entry.h  entry_builder.cpp  entry_builder.h  formatter.h  logger.cpp  logger.h  logger_common.cpp  logger_common.h  logger_sink.cpp  logger_sink.h  logger_thread.cpp  logger_thread.h  sink.cpp  sink.h  stack_trace.cpp  stack_trace.h
source/kibble/logger/formatters/: monochrome_terminal_formatter.cpp  monochrome_terminal_formatter.h  powerline_terminal_formatter.cpp  powerline_terminal_formatter.h  vscode_terminal_formatter.cpp  vscode_terminal_formatter.h
source/kibble/logger/policies/: stack_trace_policy.cpp  stack_trace_policy.h  uid_filter.cpp  uid_filter.h
source/kibble/logger/sinks/: console_sink.cpp  console_sink.h  file_sink.cpp  file_sink.h  net_sink.cpp  net_sink.h
source/kibble/logger2/: channel.cpp  channel.h  entry.h  entry_builder.cpp  entry_builder.h  formatter.h  logger.h  policy.h  severity.cpp  severity.h  sink.h
source/kibble/logger2/formatters/: console_formatter.cpp  console_formatter.h  powerline_terminal_formatter.cpp  powerline_terminal_formatter.h  vscode_terminal_formatter.cpp  vscode_terminal_formatter.h
source/kibble/logger2/policies/: stack_trace_policy.cpp  stack_trace_policy.h  uid_filter.cpp  uid_filter.h
source/kibble/logger2/sinks/: console_sink.cpp  console_sink.h  file_sink.cpp  file_sink.h  net_sink.cpp  net_sink.h
source/kibble/math/: catenary.cpp  catenary.h  color.cpp  color.h  color_table.h  constexpr_math.h  convolution.cpp  convolution.h  easings.h  morton.cpp  morton.h  morton_glm.h  numeric.cpp  numeric.h  spline.cpp  spline.h  statistics.cpp  statistics.h
source/kibble/math/impl/: morton_bmi.h  morton_lut.h
source/kibble/memory/: arena.h  arena_base.cpp  arena_base.h  atomic_pool_allocator.h  config.h  free_list.cpp  free_list.h  heap_area.cpp  heap_area.h  linear_allocator.cpp  linear_allocator.h  linear_buffer.h  memory.h  memory.inc  memory_utils.cpp  memory_utils.h  policy.h  pool_allocator.cpp  pool_allocator.h
source/kibble/memory/allocator/: atomic_pool_allocator.h  linear_allocator.cpp  linear_allocator.h  pool_allocator.cpp  pool_allocator.h  tlsf_allocator.cpp  tlsf_allocator.h
source/kibble/memory/policy/: bounds_checking_simple.h  memory_tracking_simple.cpp  memory_tracking_simple.h  memory_tracking_verbose.cpp  memory_tracking_verbose.h  policy.h  thread_guard_multi_thread.h
source/kibble/memory/util/: alignment.h  arithmetic.cpp  arithmetic.h  debug.cpp  debug.h  free_list.cpp  free_list.h  literals.h
source/kibble/net/: tcp_acceptor.cpp  tcp_acceptor.h  tcp_connector.cpp  tcp_connector.h  tcp_stream.cpp  tcp_stream.h
source/kibble/random/: noise_blender.h  noise_octaver.h  random_operation.h  simplex_noise.cpp  simplex_noise.h  uuid-v4.cpp  uuid-v4.h  uuid.cpp  uuid.h  xor_shift.cpp  xor_shift.h
source/kibble/random/impl/: endian.h
source/kibble/self/: self.cpp  self.h
source/kibble/string/: string.cpp  string.h
source/kibble/thread/: alignment.h  atomic_queue.h  intrin.h  job.cpp  job.h  sanitizer.h  scheduler.cpp  scheduler.h  sync.cpp  sync.h
source/kibble/thread/impl/: atomic_queue.h  common.h  intrin.h  monitor.cpp  monitor.h  scheduler.cpp  scheduler.h  worker.cpp  worker.h
source/kibble/thread/job/: barrier.h  barrier_id.h  config.h  (+9 more)
source/kibble/time/: clock.cpp  clock.h  instrumentation.cpp  instrumentation.h  time_base.cpp  time_base.h
source/kibble/undo/: undo.cpp  undo.h
source/kibble/util/: addressable_array.h  ct_counter.h  debug_break.h  delegate.h  internal.h  sanitizer.h  sparse_set.h  stack_trace.cpp  stack_trace.h  unordered_dense.h
source/tests/: CMakeLists.txt  bench.cpp  bench_morton.cpp  bench_simplex.cpp  bench_sqrt.cpp  catch_app.cpp  ex_argparse.cpp  ex_easing.cpp  ex_filesystem.cpp  fuzz_tester.cpp  nuclear.cpp  test.cpp  test_ap.cpp  test_common.hpp  test_event.cpp  test_fs.cpp  test_hash.cpp  test_job.cpp  test_logger.cpp  test_logger2.cpp  test_memory.cpp  test_memory_stream.cpp  test_morton.cpp  test_optimization.cpp  test_settings.cpp  test_undo.cpp  test_uuid.cpp
source/tests/common/: utils.hpp  vec.h
source/util/: CMakeLists.txt  internstring.cpp  kmd5.cpp  kpak.cpp
(+60 files in other folders)
